# erdos396

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.claude/: settings.json
.claude/hooks/: pre-commit-lint.sh  stop-fmt.sh
.github/workflows/: ci.yml  claude-code-review.yml
certificates/: README.md
certificates/scripts/: analyze_prefix_core_proxy.py  check_validate_report.py
certificates/validate/: README.md  SHA256SUMS  validate_k10_partition_check.txt  validate_k10_range_0_8804882497_manifest.txt  validate_k10_range_8804882497_17609764994_manifest.txt  validate_k11_partition_check.txt  validate_k11_range_0_610796592505_manifest.txt  validate_k11_range_610796592505_1070858041585_manifest.txt  validate_k12_partition_check.txt  validate_k12_range_0_2880387737783_manifest.txt  validate_k12_range_2880387737783_5048891644646_manifest.txt  validate_k13_partition_check.txt  validate_k13_range_0_9684496742351_manifest.txt  validate_k13_range_9684496742351_18253129921842_manifest.txt  validate_k8_partition_check.txt  validate_k8_range_0_169974626_manifest.txt  validate_k8_range_169974626_339949252_manifest.txt  validate_k9_partition_check.txt  validate_k9_range_0_8804882496_manifest.txt  validate_k9_range_8804882496_17609764993_manifest.txt  validate_k9_witness_1019547844_check.txt  validate_report_k10_0_8804882497.json  validate_report_k10_8804882497_17609764994.json  validate_report_k11_0_610796592505.json  validate_report_k11_610796592505_1070858041585.json  validate_report_k12_0_2880387737783.json  validate_report_k12_2880387737783_5048891644646.json  validate_report_k13_0_9684496742351.json  validate_report_k13_9684496742351_18253129921842.json  validate_report_k8_0_169974626.json  validate_report_k8_169974626_339949252.json  validate_report_k9_0_8804882496.json  validate_report_k9_8804882496_17609764993.json
crates/carry-diagnostic/: Cargo.toml
crates/carry-diagnostic/src/: analysis.rs  fast_sieve.rs  main.rs  scanner.rs
crates/drt/: Cargo.toml
crates/drt/src/: generators.rs  lib.rs  oracle.rs  properties.rs
crates/drt/tests/: differential.rs
crates/erdos396/: Cargo.toml
crates/erdos396/src/: checkpoint.rs  factor.rs  lib.rs  main.rs  prefilter.rs  search.rs  sieve.rs  sieve_solver.rs
crates/erdos396/src/run_collection/: expand.rs  mod.rs  parquet.rs
crates/search-lab/: Cargo.toml  README.md  bench-cpp-port.md  bench-cpp-ref.md  bench-cpp.md  bench-erdos396.md  bench-rust-pgo.md  bench-rust.md  justfile  parse_bench.py  parse_bench_cpp.py  results-396.txt
crates/search-lab/cpp-reference/: README.md  erdos_problem_396.cpp  justfile  main.cpp
crates/search-lab/src/: main.rs
docs/: false_positive_working_report.md  formal_verification_rationale.md  lean_rust_bridge.md  reproducibility.md  search_algorithm_optimizations.md  search_lab_optimizations.md  small_prime_barrier.md  trust.md  validation.md
formal/: Erdos396FFI.lean  README.md  SmallPrimeBarrier.lean  lake-manifest.json  lakefile.toml
formal/Erdos396FFI/: Basic.lean  Main.lean
formal/SmallPrimeBarrier/: Algorithm.lean  Defs.lean  Main.lean
scripts/: check_search_report.py  verify_witness.py
src/: build_info.rs  checkpoint.rs  factor.rs  governor.rs  int_math.rs  lib.rs  main.rs  prefilter.rs  search.rs  sieve.rs  verify.rs
src/false_positive/: classify.rs  mod.rs
src/run_collection/: mod.rs  schema.rs  source.rs
