[workspace]
members = ["crates/erdos396", "crates/carry-diagnostic", "crates/search-lab"]
resolver = "2"

[profile.dev]
opt-level = 1  # Faster dev builds with some optimization

[profile.release]
opt-level = 3
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Better optimization (single codegen unit)
panic = "abort"          # Smaller binary, no unwinding
strip = true             # Strip symbols
debug = false

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Profile for server deployment — maximum performance
[profile.server]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
