[package]
name = "erdos396"
version = "1.0.0"
edition = "2021"
authors = ["Erdős 396 Research Team"]
description = "High-performance search for Erdős Problem #396 witnesses via Governor Set analysis"
license = "MIT"
repository = "https://github.com/jdehorty/erdos396"
keywords = ["number-theory", "erdos", "combinatorics", "parallel"]
categories = ["mathematics", "science"]

[lib]
name = "erdos396"
path = "src/lib.rs"

[[bin]]
name = "erdos396"
path = "src/main.rs"

[[bin]]
name = "verify"
path = "src/bin/verify.rs"

[[bin]]
name = "validate"
path = "src/bin/validate.rs"

[[bin]]
name = "audit_runs"
path = "src/bin/audit_runs.rs"

[[bin]]
name = "build_run_corpus"
path = "src/bin/build_run_corpus.rs"

[[bin]]
name = "classify_run_windows"
path = "src/bin/classify_run_windows.rs"

[[bin]]
name = "query_run_windows"
path = "src/bin/query_run_windows.rs"

[[bin]]
name = "analyze_false_positives"
path = "src/bin/analyze_false_positives.rs"

[dependencies]
# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Small vector optimization
smallvec = "1.13"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization for checkpoints
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Columnar storage
arrow = "54.2"
parquet = { version = "54.2", features = ["arrow"] }
walkdir = "2.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress display
indicatif = { version = "0.17", features = ["rayon"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Temp dirs (used by bench mode to avoid polluting real output dir)
tempfile = "3.10"
