[package]
name = "erdos396"
version = "1.0.0"
edition = "2021"
authors = ["Erdős 396 Research Team"]
description = "Core mathematical library for Erdős Problem #396 — governor set analysis, prime sieves, and witness verification"
license = "MIT"
repository = "https://github.com/jdehorty/erdos396"
keywords = ["number-theory", "erdos", "combinatorics", "parallel"]
categories = ["mathematics", "science"]

[lib]
name = "erdos396"
path = "src/lib.rs"

# Binaries have been archived to the archive/erdos396-monolith branch.
# The library is retained as a dependency for carry-diagnostic and tests.

[dependencies]
# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Small vector optimization
smallvec = "1.13"

# CLI (used by library checkpoint/search config types)
clap = { version = "4.4", features = ["derive"] }

# Serialization for checkpoints
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Columnar storage (used by run_collection module)
arrow = "54.2"
parquet = { version = "54.2", features = ["arrow"] }
walkdir = "2.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress display
indicatif = { version = "0.17", features = ["rayon"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Temp dirs
tempfile = "3.10"
